@@ -1,6 +1,7 @@
 - implemented IOC-303 - Support proxying for components registered using factory method
+- implemented IOC-302 - Support open generic components where implementation has more generic parameters than service if they can be figured out based on generic constraints
 - implemented IOC-301 - Add ConfigureIf method to be used with custom predicate when configuring components registered via convention
-- implemented IOC-298 - add a method to FromAssembly that will scan all assemblies in the application for installers
+- implemented IOC-298 - Add a method to FromAssembly that will scan all assemblies in the application for installers
 - implemented IOC-292 - Add fluent registration entry point that passes through truly "all types" that is interfaces, or abstract classes can be registered too
 - implemented IOC-291 - Add alias class to AllTypes that is better named, like 'Classes'
 - implemented IOC-287 - Add overloads to OnCreate and OnDestroy that only take the instance and leave the container out as it is often superfluous
@@ -23,6 +24,7 @@
 - implemented IOC-246 - Remove alternative naming subsystems
 - implemented IOC-243 - Remove obsolete UseSingleInterfaceProxy option
 
+- fixed IOC-305 - GenericListConverter throwing NotImplementedException
 - fixed IOC-299 - ResolveAll ignores services for open version of generic service requested
 - fixed IOC-297 - Container should throw an exception if a "primitive type" is registered as a service, since it will not be resolved
 - fixed IOC-295 - registration via XML ignores service specofied in attribute
